--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,14 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install pipenv
           pipenv install --dev
+
+      - name: Package application
+        run: |
+          mkdir -p package
+          cp -r src/* package/
+          pip install -r src/requirements.txt -t package/
+          cd package
+          zip -r ../lambda_function.zip .
+          cd ..
+        shell: /usr/bin/bash -e {0}  
+      
