feat: Initialize and validate Terraform configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,19 @@ jobs:
           echo "Contents of package:"
           unzip -l lambda_function.zip          
   
-          
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.3
+          terraform_wrapper: true
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  
+      - name: Terraform Init
+        run: terraform init -reconfigure -backend-config="token=${{ secrets.TF_API_TOKEN }}" -compact-warnings
+        working-directory: infrastructure/
+  
+      - name: Terraform Validate
+        run: terraform validate -no-color -compact-warnings
+        working-directory: infrastructure/
+  
   
