--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,10 @@ jobs:
   deploy:
     env:
       TF_IN_AUTOMATION: true
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      ENVIRONMENT: "dev" # Define the environment here or pass it as a secret if it's sensitive
+      TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TERRAFORM_CLOUD_TOKEN: ${{ secrets.TF_API_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
